--- a/result_page.html
+++ b/result_page.html
@@ -6,8 +6,13 @@
 </head>
 <body>
     <div>
-        <p>I need something to watch while I eat</p>
-        <p><a href="first_question.html"><button>Start</button></a></p>
+        <p>you might like this!</p>
+    </div>
+    <div>
+        <p><button>return</button></p>
+    </div>
+    <div>
+        <p><a href="first_question.html"><button>return</button></a></p>
     </div>
 </body>
 </html>
