--- a/first_question.html
+++ b/first_question.html
@@ -8,16 +8,16 @@
     <div>
         <p>What food did you bring?</p>
         <a href="second_questoin.html">
-            <p><button id="fastfood" value="ff">Fast food</button></p>
+            <p><button id="food" value="ff">Fast food</button></p>
         </a>
         <a href="second_questoin.html">
-            <p><button id="hotfood" value="hf">Hot & Spicy food</button></p>
+            <p><button id="food" value="hf">Hot & Spicy food</button></p>
         </a>
         <a href="second_questoin.html">
-            <p><button id="breakfast" value="bf">Simple breakfast</button></p>
+            <p><button id="food" value="bf">Simple breakfast</button></p>
         </a>
         <a href="second_questoin.html">
-            <p><button id="snacks" value="sc">Snacks and chips</button></p>
+            <p><button id="food" value="sc">Snacks and chips</button></p>
         </a>
     </div>
 </body>
