--- a/second_questoin.html
+++ b/second_questoin.html
@@ -8,13 +8,13 @@
     <div>
         <p>You with somebody?</p>
         <a href="result_page.html">
-            <p><button id="solo" value="1">nope, just me</button></p>
+            <p><button id="companion" value="1">nope, just me</button></p>
         </a>
         <a href="result_page.html">
-            <p><button id="lover" value="2">with someone special</button></p>
+            <p><button id="companion" value="2">with someone special</button></p>
         </a>
         <a href="result_page.html">
-            <p><button id="family" value="3">with dear family</button></p>
+            <p><button id="companion" value="3">with dear family</button></p>
         </a>
     </div>
 </body>
