--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE HTML>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Copyright" content="@Q5dis" />
+    <title>I need something to watch while I eat</title>
 </head>
 <body>
-is this working?
+    <div>
+        <p>I need something to watch while I eat</p>
+        <span><a href="first_question.html"><button>Start</button></a></span>
+    </div>
 </body>
-<HTML>
+</html>
